[gd_scene load_steps=5 format=3 uid="uid://3dg7467qvwkl"]

[ext_resource type="PackedScene" uid="uid://nl1uiftrpq1y" path="res://bubble/bubble.tscn" id="1_3gdjl"]
[ext_resource type="Script" path="res://bubble/hostile_bubble.gd" id="1_npqah"]

[sub_resource type="SphereShape3D" id="SphereShape3D_62we0"]
radius = 0.65

[sub_resource type="SphereShape3D" id="SphereShape3D_62gc7"]

[node name="HostileBubble" type="RigidBody3D" node_paths=PackedStringArray("mesh", "obstacle_collision", "player_collision")]
collision_layer = 2
collision_mask = 2
axis_lock_linear_y = true
script = ExtResource("1_npqah")
mesh = NodePath("Bubble")
obstacle_collision = NodePath("CollisionShape3D")
player_collision = NodePath("Area3D/CollisionShape3D")

[node name="Bubble" parent="." instance=ExtResource("1_3gdjl")]
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_62we0")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_62gc7")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_entered" from="Area3D" to="." method="_on_player_contact"]
[connection signal="timeout" from="Timer" to="." method="inflate_bubble"]
